--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <h3><a href="chap1053.8.html" class="btn"><font face="calibri">One Pièce VF CHAPITRE 1053.8</font></a></h3>
 <h3><a href="chap1054.html" class="btn"><font face="calibri">One Pièce VF CHAPITRE 1054</font></a></h3>
 <h3><a href="chap1055.html" class="btn"><font face="calibri">One Pièce VF CHAPITRE 1055</font></a></h3>
+<h3><a href="chap1056.html" class="btn"><font face="calibri">One Pièce VF CHAPITRE 1056</font></a></h3>
 <img class="active" src="https://cdn.discordapp.com/attachments/868578469213265970/997950196044537906/Capture_25-removebg-preview.png" width="150" height="50" >
 
 <h1><font face="calibri">Animés</font></h1>
