--- a/les chaps.html
+++ b/les chaps.html
@@ -130,6 +130,21 @@
     <a href="chap103.html" class="btn"><h2>CHAPITRE 103</h2></a>
     <a href="chap104.html" class="btn"><h2>CHAPITRE 104</h2></a>
     <a href="chap105.html" class="btn"><h2>CHAPITRE 105</h2></a>
+    <a href="chap106.html" class="btn"><h2>CHAPITRE 106</h2></a>
+    <a href="chap107.html" class="btn"><h2>CHAPITRE 107</h2></a>
+    <a href="chap108.html" class="btn"><h2>CHAPITRE 108</h2></a>
+    <a href="chap109.html" class="btn"><h2>CHAPITRE 109</h2></a>
+    <a href="chap110.html" class="btn"><h2>CHAPITRE 110</h2></a>
+    <a href="chap111.html" class="btn"><h2>CHAPITRE 111</h2></a>
+    <a href="chap112.html" class="btn"><h2>CHAPITRE 112</h2></a>
+    <a href="chap113.html" class="btn"><h2>CHAPITRE 113</h2></a>
+    <a href="chap114.html" class="btn"><h2>CHAPITRE 114</h2></a>
+    <a href="chap115.html" class="btn"><h2>CHAPITRE 115</h2></a>
+    <a href="chap116.html" class="btn"><h2>CHAPITRE 116</h2></a>
+    <a href="chap117.html" class="btn"><h2>CHAPITRE 117</h2></a>
+    <a href="chap118.html" class="btn"><h2>CHAPITRE 118</h2></a>
+    <a href="chap119.html" class="btn"><h2>CHAPITRE 119</h2></a>
+    <a href="chap120.html" class="btn"><h2>CHAPITRE 120</h2></a>
     <a href="chap106.html" class="btn"><h2>CHAPITRE 1036</h2></a>
     <a href="chap1050.html" class="btn"><h2>CHAPITRE 1050</a></h2>
     <a href="chap1051.html" class="btn"><h2>CHAPITRE 1051</a></h2>
@@ -141,6 +156,7 @@
     <a href="chap1053.8.html" class="btn"><h2>CHAPITRE 1053.8</a></h2>
     <a href="chap1054.html" class="btn"><h2>CHAPITRE 1054</a></h2>
     <a href="chap1055.html" class="btn"><h2>CHAPITRE 1055</a></h2>
+    <a href="chap1056.html" class="btn"><h2>CHAPITRE 1056</a></h2>
     <img class="active" src="https://cdn.discordapp.com/attachments/868578469213265970/997950196044537906/Capture_25-removebg-preview.png" width="150" height="50" >
     <a href="acceuil.html" class="btn"><h2>Retourner à la liste des mangas</h2></a>
     <a href="index.html" class="btn"><h1>Revenir à l'acueil</font></h1></a>
